--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,4 @@ EDGELIST_BASEDIR=/home/rogerio/git/k-contingency-screening
 CRITICALITY_BASEDIR=/home/rogerio/git/k-contingency-screening
 GRAPHNAME=ieee118
 K=1
-RESULT_BASEDIR=./results/clg
-FIGURE_BASEDIR=./results/clg/figures
+RESULT_BASEDIR=./results
